--- a/src/drivers/character/CMakeLists.txt
+++ b/src/drivers/character/CMakeLists.txt
@@ -14,38 +14,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-
-add_library(msos_drivers_character STATIC)
-
-set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/drivers/character)
-
-target_sources(msos_drivers_character
-    PUBLIC
-        ${library_includes}/usart/usart_file.hpp
-        ${library_includes}/usart/usart_driver.hpp
-
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/usart/usart_file.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/usart/usart_driver.cpp
-)
-
-target_include_directories(msos_drivers_character
-    PUBLIC
-        ${PROJECT_SOURCE_DIR}/include
-)
-
-target_compile_options(msos_drivers_character
-    PUBLIC
-        $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a>
-        $<$<CONFIG:DEBUG>:-Og -g>
-        $<$<CONFIG:RELEASE>:-Os>
-    PRIVATE
-        $<$<COMPILE_LANGUAGE:CXX>:-Werror -Wall -Wextra -Wpedantic -Wcast-align -Wunused -Wshadow -Wpointer-arith -Wcast-qual -Wno-missing-braces>
-)
-
-target_link_libraries(msos_drivers_character
-    PRIVATE
-        eul
-        msos_printer
-        board
-)
+if (ENABLE_DRIVERS_CHARACTER_USART)
+    add_subdirectory(usart)
+endif ()
