adding sfml display

--- a/src/drivers/displays/CMakeLists.txt
+++ b/src/drivers/displays/CMakeLists.txt
@@ -19,3 +19,6 @@ if (ENABLE_DRIVERS_DISPLAYS_SSD1306)
     add_subdirectory(ssd1306)
 endif ()
 
+if (ENABLE_DRIVERS_DISPLAYS_SFML)
+    add_subdirectory(sfml)
+endif ()
