--- a/src/os/sys/CMakeLists.txt
+++ b/src/os/sys/CMakeLists.txt
@@ -1,5 +1,5 @@
 # This file is part of MSOS project. This is simple OS for embedded development devices.
-# Copyright (C) 2019 Mateusz Stadnik
+# Copyright (C) 2020 Mateusz Stadnik
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,28 +14,25 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-add_library(msos_posix)
+add_library(msos_os_sys)
 
-set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/posix)
+set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/os/sys)
 
-target_sources(msos_posix
+target_sources(msos_os_sys
     PUBLIC
-        ${library_includes}/dirent.h
-        ${library_includes}/dirent_utils.hpp
+        ${library_includes}/ioctl.h
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/dirent.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/fsync.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/dirent_utils.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ioctl.cpp
 )
 
-target_include_directories(msos_posix
+target_include_directories(msos_os_sys
     PUBLIC
         ${library_includes}
         ${PROJECT_SOURCE_DIR}/include
 )
 
 
-target_compile_options(msos_posix
+target_compile_options(msos_os_sys
     PUBLIC
         $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a>
         $<$<CONFIG:DEBUG>:-Og -g>
@@ -45,7 +42,7 @@ target_compile_options(msos_posix
 
 )
 
-target_link_libraries(msos_posix
+target_link_libraries(msos_os_sys
     PRIVATE
         msos_fs
         hal_flags
