--- a/test/st/dynamic_linker/host/CMakeLists.txt
+++ b/test/st/dynamic_linker/host/CMakeLists.txt
@@ -40,16 +40,12 @@ set_target_properties(host
         SUFFIX ".elf"
 )
 
-find_program(qemu_img qemu-img)
-
-if (NOT qemu_img)
-    message(FATAL_ERROR "qemu-img executable not found!")
-endif ()
+find_program(truncate_exec truncate)
 
 add_custom_command(
     TARGET host
     POST_BUILD
-    COMMAND ${qemu_img} resize ${CMAKE_CURRENT_BINARY_DIR}/host.bin 32K
+    COMMAND ${truncate_exec} --size 32K ${CMAKE_CURRENT_BINARY_DIR}/host.bin
     VERBATIM
 )
 
