--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -14,6 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
+add_subdirectory(ls)
 add_subdirectory(shell)
 
 add_library(msos_apps)
