--- a/test/ut/apps/CMakeLists.txt
+++ b/test/ut/apps/CMakeLists.txt
@@ -14,5 +14,4 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-add_subdirectory(ut)
-add_subdirectory(st)
+add_subdirectory(shell)
