--- a/src/posix/CMakeLists.txt
+++ b/src/posix/CMakeLists.txt
@@ -43,7 +43,7 @@ target_compile_options(msos_posix
         $<$<CONFIG:DEBUG>:-Og -g>
         $<$<CONFIG:RELEASE>:-Os>
     PRIVATE
-        $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a -Werror -Wall -Wextra -Wpedantic -Wconversion -Wcast-align -Wunused -Wshadow -Wold-style-cast -Wpointer-arith -Wcast-qual -Wno-missing-braces>
+        $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a -Werror -Wall -Wextra -Wpedantic -Wcast-align -Wunused -Wshadow -Wpointer-arith -Wcast-qual -Wno-missing-braces>
 
 )
 
@@ -51,5 +51,6 @@ target_link_libraries(msos_posix
     PRIVATE
         msos_fs
         hal_flags
+        hal
         eul_filesystem
 )
