stm32f429 compiles but not working

--- a/src/dynamic_linker/CMakeLists.txt
+++ b/src/dynamic_linker/CMakeLists.txt
@@ -17,21 +17,21 @@
 find_file (GENERATE_API generate_api.py ${PROJECT_SOURCE_DIR}/scripts)
 
 add_custom_target(api_generator
-    COMMAND python3 ${GENERATE_API} --api=${PROJECT_SOURCE_DIR}/api/symbol_codes.json --output ${CMAKE_CURRENT_BINARY_DIR}/ --input ${PROJECT_SOURCE_DIR}
+    COMMAND python3 ${GENERATE_API} --api=${PROJECT_SOURCE_DIR}/api/symbol_codes.json --output ${CMAKE_CURRENT_BINARY_DIR}/ --input ${PROJECT_BINARY_DIR}
     DEPENDS ${GENERATE_API} ${PROJECT_SOURCE_DIR}/api/symbol_codes.json
     VERBATIM
 )
 
 add_custom_command(
-    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/symbol_codes.h
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/symbol_codes.h ${CMAKE_CURRENT_BINARY_DIR}/generated_symbols.json
     DEPENDS api_generator
     VERBATIM
 )
 
-
 set (generated_api_file ${CMAKE_CURRENT_BINARY_DIR}/generated_symbols.json CACHE INTERNAL "" FORCE)
 
 set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/symbol_codes.h PROPERTIES GENERATED 1 )
+set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/generated_symbols.json PROPERTIES GENERATED 1 )
 
 set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/dynamic_linker)
 add_library(msos_dynamic_linker STATIC ${CMAKE_CURRENT_BINARY_DIR}/symbol_codes.h)
