--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -179,7 +179,7 @@ if (${vendor} STREQUAL "STM32")
         POST_BUILD
         COMMAND rm -f ${PROJECT_BINARY_DIR}/rootfs.img
         COMMAND genromfs -f ${PROJECT_BINARY_DIR}/rootfs.img -d ${PROJECT_BINARY_DIR}/rootfs -v -V msos_romfs
-        COMMAND ${truncate_exec} --size 50K ${executable_file}
+        COMMAND ${truncate_exec} --size ${flash_size} ${executable_file}
         COMMAND cp ${executable_file} ${executable_file}.tmp
         COMMAND ${CMAKE_COMMAND} -E "cat" ${executable_file}.tmp ${PROJECT_BINARY_DIR}/rootfs.img > ${executable_file}
         COMMAND echo "ROMFS generated!"
